issue #75: reworked client module and implemented ServerRequestHandler